tests/snapshots/test_runner__tests__compiler__typecheck__function_generalization_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let identity = \x => x
let x = 'hello'.identity()
let y: Number = x

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/function_generalization_1.kk:3:17
  │
3 │ let y: Number = x
  │                 ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Number      | + String    |
    +---------------+-------------+
